--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 						<version>2.2.0</version>
 						<configuration>
 							<to>
-								<image>${DockerHubUsername}/baeldung-ci-cd-process</image>
+								<image>y3ung/baeldung-ci-cd-process</image>
 								<tags>
 									<tag>${project.version}</tag>
 									<tag>latest</tag>
